[package]
name = "electric_eyes"
version = "0.1.0"
authors = ["Cameron Wolff <36940948+camwolff02@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "electric_eyes"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4.26"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
map_to_range = "0.2.0"
eye_math = { path = "../eye_math" }
prost = "0.13.5"
map_range_int = "1.1.0"

[build-dependencies]
prost-build = "0.13.5"
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
